--- a/Gent/Gent/New UI/Base.lproj/Main_NewDesign.storyboard
+++ b/Gent/Gent/New UI/Base.lproj/Main_NewDesign.storyboard
@@ -62,6 +62,9 @@
                                         <state key="normal" title="Sign up to MVP">
                                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <segue destination="Y20-eT-Ben" kind="presentation" modalTransitionStyle="flipHorizontal" id="VmA-q6-fSE"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" tag="1000" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2L6-gG-0Pj">
                                         <rect key="frame" x="0.0" y="557" width="359" height="70"/>
@@ -99,6 +102,41 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QZe-ZK-wcn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="208.80000000000001" y="65.217391304347828"/>
+        </scene>
+        <!--signup-->
+        <scene sceneID="Hkh-5h-PWB">
+            <objects>
+                <viewController title="signup" id="Y20-eT-Ben" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="jrB-tj-apb">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" largeTitles="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lge-rM-5G7">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="AbW-h3-eLJ"/>
+                                </constraints>
+                                <color key="barTintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <textAttributes key="titleTextAttributes">
+                                    <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                </textAttributes>
+                                <items>
+                                    <navigationItem title="[ MobileGent]" id="A1j-6Y-OI2"/>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="lge-rM-5G7" firstAttribute="leading" secondItem="tYD-Bc-D6F" secondAttribute="leading" id="0VT-Ng-H8u"/>
+                            <constraint firstItem="lge-rM-5G7" firstAttribute="top" secondItem="tYD-Bc-D6F" secondAttribute="top" id="XAE-hP-6D3"/>
+                            <constraint firstItem="lge-rM-5G7" firstAttribute="trailing" secondItem="tYD-Bc-D6F" secondAttribute="trailing" id="v0R-IH-6vC"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="tYD-Bc-D6F"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oi3-S0-pTO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1215" y="65"/>
         </scene>
     </scenes>
 </document>
