--- a/Gent/Gent/New UI/Base.lproj/Main_NewDesign.storyboard
+++ b/Gent/Gent/New UI/Base.lproj/Main_NewDesign.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="J42-0v-5C5">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="7ba-wr-reP">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -17,8 +17,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="aLm-br-6zw">
-                                <rect key="frame" x="8" y="20" width="359" height="627"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="aLm-br-6zw">
+                                <rect key="frame" x="16" y="64" width="343" height="583"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="1000" text="[ MobileGent ]" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7oC-2C-BBq">
                                         <rect key="frame" x="0.0" y="0.0" width="359" height="90"/>
@@ -30,30 +30,30 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="1000" text="Sign up to MVP for better iPhone 8 Plus prices" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T2Y-94-MBk">
-                                        <rect key="frame" x="0.0" y="100" width="359" height="72.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="70.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="1000" text="Save 11% on repairs, and get an extra 22% when you trade in your phone" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="84z-PC-17w">
-                                        <rect key="frame" x="0.0" y="182.5" width="359" height="204.5"/>
+                                        <rect key="frame" x="0.0" y="90.5" width="343" height="222.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lhL-c7-cEX">
-                                        <rect key="frame" x="0.0" y="397" width="359" height="70"/>
+                                        <rect key="frame" x="0.0" y="333" width="343" height="70"/>
                                         <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="70" id="gl9-IT-M0l"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                        <state key="normal" title="Login">
+                                        <state key="normal" title="Sign in">
                                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bbQ-We-TMG">
-                                        <rect key="frame" x="0.0" y="477" width="359" height="70"/>
+                                        <rect key="frame" x="0.0" y="423" width="343" height="70"/>
                                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="70" id="bDU-lL-oYB"/>
@@ -63,11 +63,11 @@
                                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
                                         <connections>
-                                            <segue destination="Y20-eT-Ben" kind="presentation" modalTransitionStyle="flipHorizontal" id="VmA-q6-fSE"/>
+                                            <segue destination="Y20-eT-Ben" kind="show" id="fby-kO-p7q"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" tag="1000" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2L6-gG-0Pj">
-                                        <rect key="frame" x="0.0" y="557" width="359" height="70"/>
+                                        <rect key="frame" x="0.0" y="513" width="343" height="70"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="70" id="cei-JM-lTr"/>
                                         </constraints>
@@ -83,17 +83,23 @@
                                         </state>
                                     </button>
                                 </subviews>
+                                <variation key="default">
+                                    <mask key="subviews">
+                                        <exclude reference="7oC-2C-BBq"/>
+                                    </mask>
+                                </variation>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="SgL-ib-hi2" firstAttribute="bottom" secondItem="aLm-br-6zw" secondAttribute="bottom" constant="20" id="0i9-ky-ILy"/>
-                            <constraint firstItem="aLm-br-6zw" firstAttribute="leading" secondItem="gng-7c-sCC" secondAttribute="leading" constant="8" id="66B-ew-SHH"/>
+                            <constraint firstItem="aLm-br-6zw" firstAttribute="leading" secondItem="gng-7c-sCC" secondAttribute="leading" constant="16" id="66B-ew-SHH"/>
                             <constraint firstItem="aLm-br-6zw" firstAttribute="top" secondItem="SgL-ib-hi2" secondAttribute="top" id="d9v-YF-rg5"/>
-                            <constraint firstAttribute="trailing" secondItem="aLm-br-6zw" secondAttribute="trailing" constant="8" id="ecZ-G8-h6v"/>
+                            <constraint firstAttribute="trailing" secondItem="aLm-br-6zw" secondAttribute="trailing" constant="16" id="ecZ-G8-h6v"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="SgL-ib-hi2"/>
                     </view>
+                    <navigationItem key="navigationItem" title="[ MobileGent ]" id="mGc-6g-sg5"/>
                     <connections>
                         <outlet property="saveLabel" destination="84z-PC-17w" id="oZY-jm-83x"/>
                         <outlet property="signupLabel" destination="T2Y-94-MBk" id="JTO-g8-JV8"/>
@@ -101,42 +107,47 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QZe-ZK-wcn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="208.80000000000001" y="65.217391304347828"/>
+            <point key="canvasLocation" x="630" y="63"/>
         </scene>
         <!--signup-->
         <scene sceneID="Hkh-5h-PWB">
             <objects>
-                <viewController title="signup" id="Y20-eT-Ben" sceneMemberID="viewController">
+                <viewController title="signup" id="Y20-eT-Ben" customClass="GSignupViewController" customModule="Gent" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="jrB-tj-apb">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <navigationBar contentMode="scaleToFill" largeTitles="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lge-rM-5G7">
-                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="AbW-h3-eLJ"/>
-                                </constraints>
-                                <color key="barTintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <textAttributes key="titleTextAttributes">
-                                    <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                </textAttributes>
-                                <items>
-                                    <navigationItem title="[ MobileGent]" id="A1j-6Y-OI2"/>
-                                </items>
-                            </navigationBar>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="lge-rM-5G7" firstAttribute="leading" secondItem="tYD-Bc-D6F" secondAttribute="leading" id="0VT-Ng-H8u"/>
-                            <constraint firstItem="lge-rM-5G7" firstAttribute="top" secondItem="tYD-Bc-D6F" secondAttribute="top" id="XAE-hP-6D3"/>
-                            <constraint firstItem="lge-rM-5G7" firstAttribute="trailing" secondItem="tYD-Bc-D6F" secondAttribute="trailing" id="v0R-IH-6vC"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="tYD-Bc-D6F"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oi3-S0-pTO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1215" y="65"/>
+            <point key="canvasLocation" x="1508" y="63"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="ZIA-Xg-DIG">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="7ba-wr-reP" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="bS9-zc-mRy">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <textAttributes key="titleTextAttributes">
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
+                        </textAttributes>
+                        <textAttributes key="largeTitleTextAttributes">
+                            <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                        </textAttributes>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="J42-0v-5C5" kind="relationship" relationship="rootViewController" id="jX6-tn-TOZ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kH1-uI-F3l" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-255" y="64"/>
         </scene>
     </scenes>
 </document>
